--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="" >
     <title>Loop Studios</title>
 
     <link rel="stylesheet" href="style.css">
@@ -41,7 +40,7 @@
 
     <!-- sections -->
     <!-- interactive VR -->
-    <section class="container content" id="sect">
+    <section class="container content" id="section1">
         <div class="img-info">
             <img src="img/desktop/image-interactive.jpg" alt="VR" class="vr">
             <div class="info">
@@ -52,7 +51,7 @@
     </section>
 
     <!-- our creators -->
-    <section class="container" id="sect">
+    <section class="container" id="section2">
         <div class="creators">
             <div class="title-btn">
                 <h1>our creators</h1>
@@ -61,58 +60,58 @@
             <div class="creations">
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-curiosity.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-curiosity.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-curiosity.jpg" class="desktop" alt="hero">
+                        <img src="img/mobile/image-curiosity.jpg" alt="robot" class="mobile">
                         <h1>the </br>curiosity</h1>
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-night-arcade.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-night-arcade.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-night-arcade.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-night-arcade.jpg" alt="robot" class="mobile">
                         <h1>night </br>arcade</h1>    
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-grid.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-grid.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-grid.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-grid.jpg" alt="robot" class="mobile">
                         <h1>the </br>grid</h1>  
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-soccer-team.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-soccer-team.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-soccer-team.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-soccer-team.jpg" alt="robot" class="mobile">
                         <h1>soccer </br>team vr</h1>
                     </a>
                 </div>
            
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-deep-earth.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-deep-earth.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-deep-earth.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-deep-earth.jpg" alt="robot" class="mobile">
                         <h1>deep </br>earth</h1>    
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-fisheye.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-fisheye.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-fisheye.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-fisheye.jpg" alt="robot" class="mobile">
                         <h1>make it </br>fisheye</h1>    
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-from-above.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-from-above.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-from-above.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-from-above.jpg" alt="robot" class="mobile">
                         <h1>from </br>above vr</h1>
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
-                        <img src="img/desktop/image-pocket-borealis.jpg" alt="hero" id="desktop">
-                        <img src="img/mobile/image-pocket-borealis.jpg" alt="robot" id="mobile">
+                        <img src="img/desktop/image-pocket-borealis.jpg" class="desktop"  alt="hero">
+                        <img src="img/mobile/image-pocket-borealis.jpg" alt="robot" class="mobile">
                         <h1>pocket </br>borealis</h1>    
                     </a>
                 </div>
@@ -138,10 +137,10 @@
            </div>
            <div class="content-2">
                <div class="icons">
-                   <a href="#facebook"><i class="fa-brands fa-facebook"></i></i></a>
-                   <a href="#twitter"><i class="fa-brands fa-twitter"></i></a>
-                   <a href="#pinterest"><i class="fa-brands fa-pinterest"></i></a>
-                   <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
+                   <a href="https://web.facebook.com/promisingdesigns22" aria-label="visit my facebook page"></a><i class="fa-brands fa-facebook"></i></i></a>
+                   <a href="https://twitter.com/PromisinDesign" aria-label="visit my twitter page"><i class="fa-brands fa-twitter"></i></a>
+                   <a href="#pinterest" aria-label="visit my pinterest page"><i class="fa-brands fa-pinterest"></i></a>
+                   <a href="#instagram" aria-label="visit my instagram page"><i class="fa-brands fa-instagram"></i></a>
                </div>
                <p>&copy;2021 loopstudios. All rights reserved.</p>
            </div>
