--- a/index.html
+++ b/index.html
@@ -146,6 +146,6 @@
            </div>
         </div>
     </footer>
-    <script src="app.js" stylesheet="text/javascript"></script>
+    <script src="app.js"></script>
 </body>
 </html>
