--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,7 +51,7 @@
     </section>
 
     <!-- our creators -->
-    <section class="container" id="section2">
+    <section class="container" id="section2" role="contentinfo">
         <div class="creators">
             <div class="title-btn">
                 <h1>our creators</h1>
@@ -62,28 +62,28 @@
                     <a href="#none">
                         <img src="img/desktop/image-curiosity.jpg" class="desktop" alt="hero">
                         <img src="img/mobile/image-curiosity.jpg" alt="robot" class="mobile">
-                        <h1>the </br>curiosity</h1>
+                        <h1 role="heading">the </br>curiosity</h1>
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
                         <img src="img/desktop/image-night-arcade.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-night-arcade.jpg" alt="robot" class="mobile">
-                        <h1>night </br>arcade</h1>    
+                        <h1 role="heading">night </br>arcade</h1>    
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
                         <img src="img/desktop/image-grid.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-grid.jpg" alt="robot" class="mobile">
-                        <h1>the </br>grid</h1>  
+                        <h1 role="heading">the </br>grid</h1>  
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
                         <img src="img/desktop/image-soccer-team.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-soccer-team.jpg" alt="robot" class="mobile">
-                        <h1>soccer </br>team vr</h1>
+                        <h1 role="heading">soccer </br>team vr</h1>
                     </a>
                 </div>
            
@@ -91,28 +91,28 @@
                     <a href="#none">
                         <img src="img/desktop/image-deep-earth.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-deep-earth.jpg" alt="robot" class="mobile">
-                        <h1>deep </br>earth</h1>    
+                        <h1 role="heading">deep </br>earth</h1>    
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
                         <img src="img/desktop/image-fisheye.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-fisheye.jpg" alt="robot" class="mobile">
-                        <h1>make it </br>fisheye</h1>    
+                        <h1 role="heading">make it </br>fisheye</h1>    
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
                         <img src="img/desktop/image-from-above.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-from-above.jpg" alt="robot" class="mobile">
-                        <h1>from </br>above vr</h1>
+                        <h1 role="heading">from </br>above vr</h1>
                     </a>
                 </div>
                 <div class="img-bx">
                     <a href="#none">
                         <img src="img/desktop/image-pocket-borealis.jpg" class="desktop"  alt="hero">
                         <img src="img/mobile/image-pocket-borealis.jpg" alt="robot" class="mobile">
-                        <h1>pocket </br>borealis</h1>    
+                        <h1 role="heading">pocket </br>borealis</h1>    
                     </a>
                 </div>
              </div>
@@ -123,7 +123,7 @@
     </section>
 
     <!-- footer -->
-    <footer>
+    <footer role="footer">
         <div class="container footer-content">
            <div class="content-1">
                 <div id="logo"><a href="#logo" class="logo">loopstudios</a></div>
