--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
 
     <!-- our creators -->
-    <section class="container" id="section2" role="contentinfo">
+    <section class="container" id="section2">
         <div class="creators">
             <div class="title-btn">
                 <h1>our creators</h1>
@@ -123,7 +123,7 @@
     </section>
 
     <!-- footer -->
-    <footer role="footer">
+    <footer>
         <div class="container footer-content">
            <div class="content-1">
                 <div id="logo"><a href="#logo" class="logo">loopstudios</a></div>
