--- a/index.html
+++ b/index.html
@@ -40,85 +40,89 @@
 
     <!-- sections -->
     <!-- interactive VR -->
-    <section class="container content" id="section1">
-        <div class="img-info">
-            <img src="img/desktop/image-interactive.jpg" alt="VR" class="vr">
-            <div class="info">
-                <h1>the leader in interactive vr</h1>
-                <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+    <section>
+        <div class="container content" id="section1">
+            <div class="img-info">
+                <img src="img/desktop/image-interactive.jpg" alt="VR" class="vr">
+                <div class="info">
+                    <h1>the leader in interactive vr</h1>
+                    <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- our creators -->
-    <section class="container" id="section2">
-        <div class="creators">
-            <div class="title-btn">
-                <h1>our creators</h1>
-                <a href="#more" class="btn">see all</a>
+    <section>
+        <div class="container" id="section2">
+            <div class="creators">
+                <div class="title-btn">
+                    <h1>our creators</h1>
+                    <a href="#more" class="btn">see all</a>
+                </div>
+                <div class="creations">
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-curiosity.jpg" class="desktop" alt="hero">
+                            <img src="img/mobile/image-curiosity.jpg" alt="robot" class="mobile">
+                            <h1>the </br>curiosity</h1>
+                        </a>
+                    </div>
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-night-arcade.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-night-arcade.jpg" alt="robot" class="mobile">
+                            <h1>night </br>arcade</h1>    
+                        </a>
+                    </div>
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-grid.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-grid.jpg" alt="robot" class="mobile">
+                            <h1>the </br>grid</h1>  
+                        </a>
+                    </div>
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-soccer-team.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-soccer-team.jpg" alt="robot" class="mobile">
+                            <h1>soccer </br>team vr</h1>
+                        </a>
+                    </div>
+            
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-deep-earth.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-deep-earth.jpg" alt="robot" class="mobile">
+                            <h1>deep </br>earth</h1>    
+                        </a>
+                    </div>
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-fisheye.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-fisheye.jpg" alt="robot" class="mobile">
+                            <h1>make it </br>fisheye</h1>    
+                        </a>
+                    </div>
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-from-above.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-from-above.jpg" alt="robot" class="mobile">
+                            <h1>from </br>above vr</h1>
+                        </a>
+                    </div>
+                    <div class="img-bx">
+                        <a href="#none">
+                            <img src="img/desktop/image-pocket-borealis.jpg" class="desktop"  alt="hero">
+                            <img src="img/mobile/image-pocket-borealis.jpg" alt="robot" class="mobile">
+                            <h1>pocket </br>borealis</h1>    
+                        </a>
+                    </div>
+                </div>
+                <div id="btn">
+                    <a href="#more" class="btn btn-bottom">see all</a>
+                </div>
             </div>
-            <div class="creations">
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-curiosity.jpg" class="desktop" alt="hero">
-                        <img src="img/mobile/image-curiosity.jpg" alt="robot" class="mobile">
-                        <h1>the </br>curiosity</h1>
-                    </a>
-                </div>
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-night-arcade.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-night-arcade.jpg" alt="robot" class="mobile">
-                        <h1>night </br>arcade</h1>    
-                    </a>
-                </div>
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-grid.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-grid.jpg" alt="robot" class="mobile">
-                        <h1>the </br>grid</h1>  
-                    </a>
-                </div>
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-soccer-team.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-soccer-team.jpg" alt="robot" class="mobile">
-                        <h1>soccer </br>team vr</h1>
-                    </a>
-                </div>
-           
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-deep-earth.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-deep-earth.jpg" alt="robot" class="mobile">
-                        <h1>deep </br>earth</h1>    
-                    </a>
-                </div>
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-fisheye.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-fisheye.jpg" alt="robot" class="mobile">
-                        <h1>make it </br>fisheye</h1>    
-                    </a>
-                </div>
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-from-above.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-from-above.jpg" alt="robot" class="mobile">
-                        <h1>from </br>above vr</h1>
-                    </a>
-                </div>
-                <div class="img-bx">
-                    <a href="#none">
-                        <img src="img/desktop/image-pocket-borealis.jpg" class="desktop"  alt="hero">
-                        <img src="img/mobile/image-pocket-borealis.jpg" alt="robot" class="mobile">
-                        <h1>pocket </br>borealis</h1>    
-                    </a>
-                </div>
-             </div>
-             <div id="btn">
-                <a href="#more" class="btn btn-bottom">see all</a>
-             </div>
         </div>
     </section>
 
@@ -139,7 +143,7 @@
                <div class="icons">
                    <a href="https://web.facebook.com/promisingdesigns22" aria-label="visit my facebook page"></a><i class="fa-brands fa-facebook"></i></i></a>
                    <a href="https://twitter.com/PromisinDesign" aria-label="visit my twitter page"><i class="fa-brands fa-twitter"></i></a>
-                   <a href="#pinterest" aria-label="visit my pinterest page"><i class="fa-brands fa-pinterest"></i></a>
+                   <a href="https://www.pinterest.com/cyruspromising/" aria-label="visit my pinterest page"><i class="fa-brands fa-pinterest"></i></a>
                    <a href="#instagram" aria-label="visit my instagram page"><i class="fa-brands fa-instagram"></i></a>
                </div>
                <p>&copy;2021 loopstudios. All rights reserved.</p>
