--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <!-- our creators -->
-    <section>
+    <main>
         <div class="container" id="section2">
             <div class="creators">
                 <div class="title-btn">
@@ -124,7 +124,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </main>
 
     <!-- footer -->
     <footer>
